syntax = "proto3";

package risk;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/risk;risk";

// 风险管理服务
service RiskService {
  // 评估风险
  rpc AssessRisk(AssessRiskRequest) returns (RiskAssessmentResponse);
  // 获取风险指标
  rpc GetRiskMetrics(GetRiskMetricsRequest) returns (RiskMetricsResponse);
  // 检查风险限额
  rpc CheckRiskLimit(CheckRiskLimitRequest) returns (RiskLimitResponse);
  // 获取风险警告
  rpc GetRiskAlerts(GetRiskAlertsRequest) returns (RiskAlertsResponse);
}

// 评估风险请求
message AssessRiskRequest {
  string user_id = 1; // 用户唯一标识
  string symbol = 2; // 交易对符号
  string side = 3; // 交易方向
  string quantity = 4; // 数量
  string price = 5; // 价格
}

// 风险评估响应
message RiskAssessmentResponse {
  string risk_level = 1; // risk等级
  string risk_score = 2; // risk分数
  string margin_requirement = 3; // 利润率requirement
  bool is_allowed = 4; // 是allowed
  string reason = 5; // 原因
}

// 获取风险指标请求
message GetRiskMetricsRequest {
  string user_id = 1; // 用户唯一标识
}

// 风险指标响应
message RiskMetricsResponse {
  string var_95 = 1; // 风险价值 (Value at Risk)
  string var_99 = 2; // 变量
  string max_drawdown = 3; // 最大drawdown
  string sharpe_ratio = 4; // 夏普比率
  string correlation = 5; // 相关性
}

// 检查风险限额请求
message CheckRiskLimitRequest {
  string user_id = 1; // 用户唯一标识
  string limit_type = 2; // 限制类型
}

// 风险限额响应
message RiskLimitResponse {
  string limit_type = 1; // 限制类型
  string limit_value = 2; // 限制value
  string current_value = 3; // current值
  string remaining = 4; // 剩余
  bool is_exceeded = 5; // 是exceeded
}

// 获取风险告警请求
message GetRiskAlertsRequest {
  string user_id = 1; // 用户唯一标识
}

// 风险告警
message RiskAlert {
  string alert_id = 1; // 告警ID
  string alert_type = 2; // alert类型
  string severity = 3; // 严重程度
  string message = 4; // 消息
  int64 timestamp = 5; // 时间戳
}

// 风险告警响应
message RiskAlertsResponse {
  repeated RiskAlert alerts = 1; // 告警
}
